[project]
name = "slack-tui"
version = "1.0.0"
description = "A terminal-based Slack client with TUI"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "rich>=13.0.0",
    "slack_sdk>=3.27.0",
    "aiohttp>=3.9.0",
    "Pillow>=10.0.0",
    "emoji>=2.0.0",
]

[project.scripts]
slack-tui = "slack_tui.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
